tests/ui/invalid_frozen_pyclass_borrow.stderr
error: cannot use `#[pyo3(set)]` on a `frozen` class
  --> tests/ui/invalid_frozen_pyclass_borrow.rs:38:12
   |
38 |     #[pyo3(set)]
   |            ^^^

error[E0271]: type mismatch resolving `<Foo as PyClass>::Frozen == False`
  --> tests/ui/invalid_frozen_pyclass_borrow.rs:11:19
   |
11 |     fn mut_method(&mut self) {}
   |                   ^ expected `False`, found `True`
   |
note: required by a bound in `extract_pyclass_ref_mut`
  --> src/impl_/extract_argument.rs
   |
   | pub fn extract_pyclass_ref_mut<'a, 'py: 'a, T: PyClass<Frozen = False>>(
   |                                                        ^^^^^^^^^^^^^^ required by this bound in `extract_pyclass_ref_mut`

error[E0271]: type mismatch resolving `<Foo as PyClass>::Frozen == False`
  --> tests/ui/invalid_frozen_pyclass_borrow.rs:15:33
   |
15 |     let borrow = foo.as_ref(py).borrow_mut();
   |                                 ^^^^^^^^^^ expected `False`, found `True`
   |
note: required by a bound in `pyo3::PyCell::<T>::borrow_mut`
  --> src/pycell.rs
   |
   |     pub fn borrow_mut(&self) -> PyRefMut<'_, T>
   |            ---------- required by a bound in this associated function
   |     where
   |         T: PyClass<Frozen = False>,
   |                    ^^^^^^^^^^^^^^ required by this bound in `PyCell::<T>::borrow_mut`

error[E0271]: type mismatch resolving `<ImmutableChild as PyClass>::Frozen == False`
  --> tests/ui/invalid_frozen_pyclass_borrow.rs:25:35
   |
25 |     let borrow = child.as_ref(py).borrow_mut();
   |                                   ^^^^^^^^^^ expected `False`, found `True`
   |
note: required by a bound in `pyo3::PyCell::<T>::borrow_mut`
  --> src/pycell.rs
   |
   |     pub fn borrow_mut(&self) -> PyRefMut<'_, T>
   |            ---------- required by a bound in this associated function
   |     where
   |         T: PyClass<Frozen = False>,
   |                    ^^^^^^^^^^^^^^ required by this bound in `PyCell::<T>::borrow_mut`

error[E0271]: type mismatch resolving `<MutableBase as PyClass>::Frozen == True`
  --> tests/ui/invalid_frozen_pyclass_borrow.rs:29:11
   |
29 |     class.get();
   |           ^^^ expected `True`, found `False`
   |
note: required by a bound in `pyo3::PyDetached::<T>::get`
  --> src/instance.rs
   |
   |     pub fn get(&self) -> &T
   |            --- required by a bound in this associated function
   |     where
   |         T: PyClass<Frozen = True> + Sync,
   |                    ^^^^^^^^^^^^^ required by this bound in `PyDetached::<T>::get`

error[E0271]: type mismatch resolving `<MutableBase as PyClass>::Frozen == True`
  --> tests/ui/invalid_frozen_pyclass_borrow.rs:33:11
   |
33 |     class.get();
   |           ^^^ expected `True`, found `False`
   |
note: required by a bound in `pyo3::PyCell::<T>::get`
  --> src/pycell.rs
   |
   |     pub fn get(&self) -> &T
   |            --- required by a bound in this associated function
   |     where
   |         T: PyClass<Frozen = True> + Sync,
   |                    ^^^^^^^^^^^^^ required by this bound in `PyCell::<T>::get`
